--- a/boutique/style.css
+++ b/boutique/style.css
@@ -2,6 +2,11 @@
     padding: 0px;
     margin: 0px;
 }
+
+.img {
+    width: 50px;
+    height: 50px;
+}
 body {
     background-color: lightgreen;
 }
